--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_new_editor.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_new_editor.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditorActivity">
+    tools:context=".editor.EditorPostActivity">
 
     <fragment
         android:id="@+id/postEditor"
