--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_temp_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_temp_layout.xml
@@ -19,7 +19,7 @@
             android:layout_centerVertical="true"
             android:contentDescription="@string/back_img"
             android:padding="10dp"
-            android:src="@drawable/back_arrow" />
+            android:src="@drawable/back_arroow" />
 
         <TextView
             android:id="@+id/header_txt"
