--- a/MyCity4Kids/MyCity4Kids/res/layout/business_details_activitynew.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/business_details_activitynew.xml
@@ -51,7 +51,7 @@
                     android:layout_height="40dp"
                     android:padding="10dp"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/back_arrow" />
+                    android:src="@drawable/back_arroow" />
 
                 <TextView
                     android:id="@+id/header_txt"
