--- a/MyCity4Kids/MyCity4Kids/res/layout/comments_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/comments_list_item.xml
@@ -23,7 +23,7 @@
             android:weightSum="1">
 
             <TextView
-                android:id="@+id/txvReviewTitle"
+                android:id="@+id/txvCommentsTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
@@ -43,14 +43,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
-                android:layout_below="@+id/txvReviewTitle"
-                android:id="@+id/reviewAddressDate"
+                android:layout_below="@+id/txvCommentsTitle"
+                android:id="@+id/commentsNameDate"
                 android:fontFamily="sans-serif-thin"
                 android:text="Address and Date"
                 android:paddingLeft="10dp"
                 android:layout_marginTop="3dp"
                 android:textColor="@color/grey_faded"/>
-            <TextView
+           <!-- <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/ratingNo"
@@ -60,33 +60,33 @@
                 android:layout_alignParentRight="true"
                 android:gravity="right"
                 android:textColor="@color/home_light_blue"
-                android:fontFamily="sans-serif-light"/>
+                android:fontFamily="sans-serif-light"/>-->
 
-        <!--    <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_gravity="bottom"
-                android:gravity="bottom"
-                >-->
-
-
-                <TextView
-                    android:id="@+id/txvReviewText"
+            <!--    <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
-                    android:fontFamily="sans-serif-thin"
-                    android:gravity="left"
-                    android:layout_below="@+id/reviewAddressDate"
-                    android:maxLines="2"
-                    android:text="Review Text"
-                    android:textColor="@color/black_color"
-                    android:textSize="14sp"
-                    android:paddingLeft="10dp"
-                    android:layout_marginTop="5dp"/>
+                    android:layout_gravity="bottom"
+                    android:gravity="bottom"
+                    >-->
 
-           <!-- </LinearLayout>-->
+
+            <TextView
+                android:id="@+id/txvCommentText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:fontFamily="sans-serif-thin"
+                android:gravity="left"
+                android:layout_below="@+id/commentsNameDate"
+                android:maxLines="2"
+                android:text="Review Text"
+                android:textColor="@color/black_color"
+                android:textSize="14sp"
+                android:paddingLeft="10dp"
+                android:layout_marginTop="5dp"/>
+
+            <!-- </LinearLayout>-->
 
 
 
