--- a/MyCity4Kids/MyCity4Kids/res/layout/detail_header.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/detail_header.xml
@@ -17,7 +17,7 @@
             android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:padding="10dp"
-            android:src="@drawable/back_arrow"  />
+            android:src="@drawable/back_arroow"  />
 
         <TextView
             android:id="@+id/header_txt"
