--- a/MyCity4Kids/MyCity4Kids/res/layout/follower_following_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/follower_following_list_item.xml
@@ -33,7 +33,7 @@
 
     <TextView
         android:id="@+id/followTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
@@ -43,16 +43,14 @@
         android:background="@drawable/follow_button_bg"
         android:gravity="center"
         android:paddingBottom="8dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
         android:paddingTop="8dp"
         android:text="FOLLOW"
         android:textColor="@color/blog.comments.follow_reply_btn"
-        android:textSize="14sp" />
+        android:textSize="10sp" />
 
     <TextView
         android:id="@+id/followingTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
@@ -60,12 +58,15 @@
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:gravity="center"
-        android:paddingBottom="8dp"
-        android:paddingRight="10dp"
-        android:paddingTop="8dp"
         android:text="FOLLOWING"
-        android:textColor="@color/blog.comments.follow_reply_btn"
-        android:textSize="14sp" />
+        android:textColor="@color/white_color"
+        android:textSize="10sp"
+        android:background="@drawable/follow_button_bg"
+        android:backgroundTint="@color/blog.comments.follow_reply_btn"
+        android:foregroundGravity="center"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
+        />
 
     <RelativeLayout
         android:id="@+id/relativeLoadingView"
