--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -17,6 +17,7 @@
     <color name="grey">#878787</color>
     <color name="dark_grey">#464646</color>
     <color name="grey_light">#eeeeee</color>
+    <color name="grey_blogger_listing">#c7c7c7</color>
     <color name="blue_color">#0000cc</color>
     <color name="blue_bg">#4c69ba</color>
     <color name="section_header">#f7f7f7</color>
