--- a/MyCity4Kids/MyCity4Kids/res/layout/header_blogger_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/header_blogger_dashboard.xml
@@ -20,6 +20,13 @@
         android:layout_margin="15dp"
         android:src="@drawable/family_xxhdpi"
         android:layout_marginTop="10dp"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/camera_icon"
+        android:layout_alignBottom="@+id/bloggerImageView"
+        android:layout_alignRight="@+id/bloggerImageView"
+        android:layout_alignEnd="@+id/bloggerImageView" />
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
