--- a/MyCity4Kids/MyCity4Kids/res/layout/header_blogger_dashboard_public.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/header_blogger_dashboard_public.xml
@@ -19,7 +19,9 @@
         android:layout_below="@+id/toolbar"
         android:layout_margin="15dp"
         android:src="@drawable/family_xxhdpi"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        />
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -132,7 +134,7 @@
             android:visibility="gone"/>
         <TextView
             android:id="@+id/followTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
@@ -141,30 +143,30 @@
             android:background="@drawable/follow_button_bg"
             android:gravity="center"
             android:paddingBottom="8dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:paddingTop="10dp"
+            android:paddingTop="8dp"
             android:text="FOLLOW"
             android:textColor="@color/blog.comments.follow_reply_btn"
-            android:textSize="14sp"
+            android:textSize="10sp"
             android:layout_below="@+id/rankLinearLL"
             android:visibility="visible"/>
 
         <TextView
             android:id="@+id/followingTextView1"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
             android:gravity="center"
-            android:paddingBottom="8dp"
-            android:paddingRight="10dp"
-            android:paddingTop="10dp"
+            android:textColor="@color/white_color"
             android:text="FOLLOWING"
-            android:textColor="@color/blog.comments.follow_reply_btn"
-            android:textSize="14sp"
+            android:textSize="10sp"
+            android:background="@drawable/follow_button_bg"
+            android:backgroundTint="@color/blog.comments.follow_reply_btn"
+            android:foregroundGravity="center"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
             android:layout_below="@+id/rankLinearLL"
             android:visibility="visible"
             />
